# Artificial-Intelligence

./: README.md
Lectures/: NP-problems  NP-problems~  csps.ppt
Lectures/chapter6/: extra
Lectures/lecture1/: extr
Lectures/lecture2/: IntroSearch-3-fall10.ppt
air_assignment_04/: .cproject  .project  CMakeLists.txt  CMakeLists.txt~
air_assignment_04/example/: assignmet04
air_assignment_04/include/: agent.hpp  environment.hpp
air_assignment_04/src/: agent.cpp  environment.cpp  main.cpp
air_assignment_05/: .cproject  .project  CMakeLists.txt
air_assignment_05/example/: main
air_assignment_05/include/: agent.hpp  environment.hpp
air_assignment_05/src/: agent.cpp  environment.cpp  main.cpp
air_assignment_06/: .cproject  .project  CMakeLists.txt
air_assignment_06/example/: main
air_assignment_06/include/: agent.hpp  environment.hpp
air_assignment_06/src/: agent.cpp  environment.cpp  main.cpp
assignment_07/: .cproject  .project  CMakeLists.txt
assignment_07/include/: agent.hpp  environment.hpp
assignment_07/src/: agent.cpp  environment.cpp  main.cpp
assignment_08/: .cproject  .project  CMakeLists.txt
assignment_08/include/: agent.hpp  environment.hpp
assignment_08/src/: agent.cpp  environment.cpp
assignment_09/: CMakeLists.txt
assignment_09/include/: agent.hpp  environment.hpp
assignment_09/src/: agent.cpp  environment.cpp  main.cpp
assignment_10/: .cproject  .project  CMakeLists.txt
assignment_10/include/: agent.hpp  definitions.hpp  env.hpp
assignment_10/src/: agent.cpp  env.cpp  main.cpp
